	  (2014-4-10).
	* configs/sama5d3x-ek/src: The red LED is controlled by PE24 which is
	  also the camera/ISI interface reset line.  So if the a camera is
	  installed, then we must avoid controlling the red LED or we inadvertently
	  also reset the camera module.  Noted by David Sidrane (2014-4-11).
	* arch/arm/src/stm32/stm32_usbhost.c/.h and stm32_otgfshost.c:  USB host
	  tracing added by Leo (2014-4-12).
	* arch/arm/src/sama5/sam_adc.c, sam_can.c, sam_emac.c, sam_gmac.c, 
	  sam_ssc.c, and sam_twi.c:  If running from SDRAM, then BOARD_MCK_FREQUENCY
	  is not a constant and cannot be used in conditional compilation (2014-4-16).
	* drivers/lcd/mio283qt9a.c and include/nuttx/lcd/mio283qt9a.h:  Update the
	  MIO183QT-9A LCD driver to support reading from the LCD.  From Toby
	  Duckworth (2014-4-16).
	* arch/arm/src/stm32/chip/stm32f20xxx_pinmap.h:  Correct a mapping for
	  SPI MOSI pin.  From dlsitzer (2014-4-26).
	* arm/src/sama5/sam_clockconfig.c and common/up_internal.h: Move the
	  un-definitions of __ramfuncs__ from the .c file to the .h file or,
	  otherwise, the attribute will be applied differently for the prototype
	  and the function definition.  Sourceforge patch 38 from Luciano Neri
	  (2014-4-17).
	* arch/arm/src/sama5/sam_emac.c:  Add missing right parentheses.  This
	  introduced in the above change and is Sourceforge patch 39 from Luciano
	  Neri (2014-4-17).
	* configs/sama5dx-ek/include/board.h and sama5d3-xplained.h:  These files
	  referenct type xcpt_t and so must include nuttx/irq.h.  This is
	  Sourceforge bug 25 submitted by Luciano Neri (2014-4-17).
	* arch/arm/src/stm32/stm32_otgfshost.c:  Some fixes related to low-speed
	  devices and interrupt endpoints from Leo (2014-4-17).
	* configs/stm32f4discovery/src/stm32_usb.c:  Add support to register
	  keyboard and mouse classes if so configured.  From Leo (2014-4-17).
	* include/nuttx/usb/usbhost:  Fix some USB HID-related conditional
	  compilation.  From Leo (2014-4-17).